--- a/FlpScanner/FLPtoXML.csproj
+++ b/FlpScanner/FLPtoXML.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FlpScanner</RootNamespace>
-    <AssemblyName>FLP-XML</AssemblyName>
+    <AssemblyName>flpbatch</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
